--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@sanity/image-url": "^1.1.0",
     "@svgr/webpack": "^8.1.0",
+    "@types/nodemailer": "^6.4.17",
     "next": "15.1.2",
     "next-sanity": "^9.8.30",
+    "nodemailer": "^6.9.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
